apps/heimdall/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: lscr.io/linuxserver/heimdall:latest
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: heimdall-config
          mountPath: /config

        ports:
        - containerPort: 80
        - containerPort: 443
      tolerations:
      - key: "maintenance"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 30
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"

      volumes:
      - name: heimdall-config
        persistentVolumeClaim:
          claimName: heimdall-config
