apps/heimdall/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: default
spec:
  selector:
    app: heimdall
  ports:
  - name: http
    targetPort: 80
    port: 80
