apps/heimdall/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lab.emc2.build`)
      kind: Rule
      services:
        - name: heimdall
          port: 80
      middlewares:
        - name: default-headers
  tls:
    # This must match the certificate secretName!
    #secretName: lab-emc2-build-staging-tls
    secretName: lab-emc2-build-tls
